Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ body {
   overflow: hidden;
 }
 
+projects-wrapper {
+  overflow-y: auto;
+}
+
 .ff-jose {
   font-family: 'Jost', sans-serif;
 }
